5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1808_2574.log
== TEST (2019-06-13 09:52:56) 
-- CODE:
from numpy import *

senha = str("Informe a senha: ")

while senha >= 8:
	
	for i range (len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
File "XXXX", line 7
    for i range (len(senha)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:53:17) 
-- CODE:
from numpy import *

senha = str("Informe a senha: ")

while senha >= 8:
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:53:43) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

while senha >= 8:
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:54:29) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

while senha >= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:54:42) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

while senha >= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:04:21) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

while i >= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- EXECUTION TIME:
1.00484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1808/2574/main.py", line 5, in <module>
    while i >= len(senha):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:04:25) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

while i >= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:04:55) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

while senha < len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:49) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

tamanho = 8

while tamanho <= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:13:47) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

tamanho = 8

while tamanho <= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:14:13) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

tamanho = 8

while tamanho <= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:14:32) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

tamanho = 8

while tamanho <= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:30) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

tamanho = 8

while tamanho >= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper():
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:31) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

tamanho = 8

while tamanho >= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper() and len(senha) >=8:
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:31:10) 
-- CODE:
from numpy import *

senha = input("Informe a senha: ")

tamanho = 8

while tamanho >= len(senha):
	
	for i in range(len(senha)):
		
		if senha[i].islower() and senha[i].isupper() and len(senha) >=8:
			valida = "SENHA VALIDA"
		else:
			valida = "SENHA INVALIDA"
	
	print(valida)
			
	
-- EXECUTION TIME:
379.576
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
